--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,7 @@
 
 // Customize the background color
 body {
-  // background-color: #f2f2f2;;
+  background: linear-gradient(30deg, plum, orchid);
 }
 
 // Customize the menubar color
