--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,12 +7,12 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(30deg, plum, orchid);
+  background-color: plum;
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: $background-start;
+  background: orchid;
 }
 
 // Customize the home page icon colors
