--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -12,7 +12,7 @@ body {
 
 // Customize the menubar color
 .ui.menu {
-  background: orchid;
+  background: plum;
 }
 
 // Customize the home page icon colors
