--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,7 @@
 
 // Customize the background color
 body {
-  background-color: plum;
+  background: linear-gradient(to bottom right, plum, thistle);
 }
 
 // Customize the menubar color
